# Search-Engine

./: CMakeLists.txt  config.ini  main.cpp  vars.h
database/: Database.cpp  Database.h
file_indexer/: Indexer.cpp  Indexer.h
parser/: Parser.cpp  Parser.h
server/: Server.cpp  Server.h
spider/: Spider.cpp  Spider.h
templates/: index.html
